--- a/src/Pages/Header/Header/Header.css
+++ b/src/Pages/Header/Header/Header.css
@@ -1,5 +1,7 @@
 nav a {
     text-decoration: none;
     margin-left: 50px;
-    font-size: 20px;
+    font-size: 24px;
+    color: black;
+    padding: 10px;
 }
