--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -43,6 +43,29 @@
 
     }
 
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
 
+    }
 
+    .single-item {
+        padding: 0;
+        margin: 0;
+    }
+
+    .single-item h3 {
+        font-size: small;
+    }
+
+    .img-container img {
+        width: 30px;
+    }
+
+    .footer-container {
+        width: 600px;
+        height: 750px;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 }
